# all-nighter-quick-ai-demo

./: .env-example  .gitignore  Makefile  docker-compose.yml  quick_test_commands.md  readme.md
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: db.py  guardrails.py  main.py  models.py
backend/app/agents/: base.py  question_for_user_agent.py  task_creation_agent.py  task_status_agent.py  user_intent_agent.py  user_service_agent.py
backend/app/agents/system_prompts/: intent_emotion.md  question_for_user.md  task_creation_agent.md  task_status.md  user_service.md
backend/app/routers/: chat.py  tasks.py
db/: Dockerfile
frontend/: Dockerfile  requirements.txt  streamlit_app.py
misc_and_utils/: quick_test_commands.md
